# ossfs

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COMPILATION.md  ChangeLog  Makefile.am  README-CN.md  README.md  autogen.sh  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cmake.yaml  linux-ci-helper.sh
bench/: Dockerfile  README.md  bench.data  bench.goofys  bench.ossfs  bench.ossfs+readdir-optimize  bench.s3fs  bench.sh  bench_format.py  bench_graph.gnuplot  bench_graph3.gnuplot  bench_graph_all.gnuplot  format_bench.sh  format_bench3.sh  format_bench_all.sh  gen_small.py  run_bench.sh
cmake/: Findopenssl.cmake  build-from-src.cmake
dependencies/: CMakeLists.txt
dependencies/patches/: photon_injections.patch
dependencies/pre-built/CLI11/: LICENSE
dependencies/pre-built/PhotonLibOS/: README.md
dependencies/pre-built/libfuse/: README.md
dependencies/src/: README.md
doc/: Makefile.am
doc/man/: ossfs.1  ossfs.1.in
scripts/: automount.template  build-pkg-arm.py  build-pkg.py  ossfs-coverage-centos7.sh
scripts/docker-file/alinux/2/: Dockerfile
scripts/docker-file/alinux/3/: Dockerfile
scripts/docker-file/alinux/4/: Dockerfile
scripts/docker-file/anolisos/7.x/: Dockerfile
scripts/docker-file/anolisos/8.x/: Dockerfile
scripts/docker-file/centos/7.x/: Dockerfile
scripts/docker-file/centos/8.x/: Dockerfile
scripts/docker-file/rockylinux/9.x/: Dockerfile
scripts/docker-file/ubuntu/14.04/: Dockerfile
scripts/docker-file/ubuntu/16.04/: Dockerfile
scripts/docker-file/ubuntu/18.04/: Dockerfile
scripts/docker-file/ubuntu/20.04/: Dockerfile
scripts/docker-file/ubuntu/22.04/: Dockerfile
scripts/docker-file/ubuntu/24.04/: Dockerfile
src/: .curl.cpp.swp  .curl.h.swp  Makefile.am  addhead.cpp  addhead.h  autolock.cpp  autolock.h  bodydata.cpp  bodydata.h  cache.cpp  cache.h  common.h  common_auth.cpp  curl.cpp  curl.h  curl_handlerpool.cpp  curl_handlerpool.h  curl_multi.cpp  curl_multi.h  curl_util.cpp  curl_util.h  direct_reader.cpp  direct_reader.h  fdcache.cpp  fdcache.h  fdcache_auto.cpp  fdcache_auto.h  fdcache_entity.cpp  fdcache_entity.h  fdcache_fdinfo.cpp  fdcache_fdinfo.h  fdcache_page.cpp  fdcache_page.h  fdcache_pseudofd.cpp  fdcache_pseudofd.h  fdcache_stat.cpp  fdcache_stat.h  fdcache_untreated.cpp  fdcache_untreated.h  fuse_adapter_ll.cpp  (+49 more)
src/admin/: cli_stats.cpp  cli_stats.h  http_server.cpp  http_server.h  uds_server.cpp  uds_server.h
src/common/: fault_injector.cpp  fault_injector.h  filesystem.h  fstab.h  fuse.h  logger.cpp  logger.h  lru_map.h  macros.h  shm_handle.cpp  shm_handle.h  ssl_probe.h  utils.cpp  utils.h
src/common/test/: test_common.h  test_lru.cpp  test_shm_handle.cpp  test_utils.cpp
src/credentials/: creds_provider.cpp  creds_provider.h  process_creds.cpp  process_creds.h  ram_role_creds.cpp  ram_role_creds.h
src/fs/: bg_vcpu_env.h  dir.cpp  dir.h  error_codes.h  file.cpp  file.h  file_prefetching.cpp  file_prefetching.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  fs.cpp  fs.h  fs_admin.cpp  fs_options.cpp  inode.cpp  inode.h  inode_ref.cpp  mem_cache.cpp  mem_cache.h  mem_pool.cpp  mem_pool.h  negative_cache.h  staged_inode_cache.h
src/fs/test/: class_declarations.h  test_appendable_object.cpp  test_basic.cpp  test_crc64.cpp  test_create_unlink.cpp  test_credentials.cpp  test_filename.cpp  test_inode.cpp  test_inode_ref.cpp  test_mem_cache_manager.cpp  test_mem_pool.cpp  test_metrics.cpp  test_negative_cache.cpp  test_object_meta.cpp  test_open_close.cpp  test_options.cpp  test_read_write.cpp  test_readdir.cpp  test_rename.cpp  test_staged_cache.cpp  test_suite.cpp  test_suite.h  test_symlink.cpp  test_util.cpp  test_util.h
src/metric/: metrics.cpp  metrics.h  metrics_server.cpp  metrics_server.h
src/oss/: oss_adapter.cpp  oss_adapter.h
test/: Makefile.am  aws_cli_config  benchmark.sh  direct_read_test.cc  filter-suite-log.sh  integration-test-common.sh  integration-test-main.sh  junk_data.c  mergedir.sh  mix_direct_read_test.cc  random_read.py  run_tests_using_sanitizers.sh  sample_ahbe.conf  sample_delcache.sh  small-integration-test.sh  stat_cache_test.py  test-utils.sh  test_policy_mount.sh  testlib.cpp  transmission_control.sh  ut_test.py  write_multiblock.cc
test/longterm-stability-test/: credential-test.sh  longterm-stability-test.sh  run-stability-test.sh
test/test_policies/: policy.json  policy_noaccess_prefix.json  set_policy.sh
